k8s/infra/network/gateway/gw-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.50.67
  listeners:
    - name: https-domain-gateway
      protocol: HTTPS
      port: 443
      hostname: gearhawk.io
      tls:
        certificateRefs:
          - name: cert-gearhawk
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-gateway
      protocol: HTTPS
      port: 443
      hostname: "*.gearhawk.io"
      tls:
        certificateRefs:
          - name: cert-gearhawk
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-dataflarelabs-domain
      protocol: HTTPS
      port: 443
      hostname: dataflarelabs.com
      tls:
        certificateRefs:
          - name: cert-dataflarelabs
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-dataflarelabs-wildcard
      protocol: HTTPS
      port: 443
      hostname: "*.dataflarelabs.com"
      tls:
        certificateRefs:
          - name: cert-dataflarelabs
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
