k8s/infra/network/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: api-gearhawk
      protocol: HTTP
      port: 80
      hostname: api.gearhawk.io
      allowedRoutes:
        namespaces:
          from: All
    - name: api-gearhawk-dev
      protocol: HTTP
      port: 80
      hostname: api-dev.gearhawk.io
      allowedRoutes:
        namespaces:
          from: All
    - name: web-gearhawk-dev
      protocol: HTTP
      port: 80
      hostname: dev.gearhawk.io
      allowedRoutes:
        namespaces:
          from: All
    - name: healthchecks
      protocol: HTTP
      port: 80
      hostname: healthchecks.gearhawk.io
      allowedRoutes:
        namespaces:
          from: All
    - name: typesense
      protocol: HTTPS
      port: 443
      hostname: typesense.gearhawk.io
      tls:
        certificateRefs:
          - name: cert-gearhawk
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: typesense-dev
      protocol: HTTPS
      port: 443
      hostname: dev-typesense.gearhawk.io
      tls:
        certificateRefs:
          - name: cert-gearhawk
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
