k8s/infra/network/gateway/gw-tcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.50.68
  listeners:
    - name: cnpg
      protocol: TCP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
